--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ Version 2.6.5
 + added downloading of custom image-urls in the image chooser
 + added genre to the movie renamer
 + now also allowing folder.jpg/png for disc images
++ option to change the language while scraping (movie and TV show chooser)
 x added some workarounds for failing TVDB searches
 x proper handling of the watched state in the NFO
 x catching some NFO parsing problems
