--- a/src/messages.properties
+++ b/src/messages.properties
@@ -556,6 +556,7 @@ metatag.trailer=Trailer
 metatag.url=Url
 metatag.video=Video
 metatag.videocodec=Video codec
+metatag.videobitrate=Video bitrate
 metatag.watched=Watched
 metatag.writer=Writer
 metatag.year=Year
