feature: show message history

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -49,6 +49,7 @@ tmm.contact=Contact us
 tmm.donate=Donate
 tmm.searchfield=Search...
 tmm.errorlogs=Show error log
+tmm.messages=Show message history
 tmm.wakeonlandevice=Wake on LAN device
 tmm.wakeonlan=Wake on LAN
 tmm.version=Version
