added filter option for year

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Version 2.6.6
 + added rating column to the movie table
 + double click in movie set/TV show tree opens the editor
 + added a message history window (menu tools - show message history)
++ added filter option for year (movie)
 x fixed the season template in the TV show renamer
 x fixed renamer (movie & tv shows) for case insensitive file systems
 x better rewriting of movie NFO after movie set editing
