--- a/src/messages.properties
+++ b/src/messages.properties
@@ -136,6 +136,8 @@ movie.synctrakt=Synchronize the movie collection with Trakt.tv
 movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
 movie.synctraktwatched=Synchronize the watched state with Trakt.tv
 movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+movie.synctrakt.selected=Synchronize selected movie(s) with Trakt.tv
+movie.synctrakt.selected.desc=Synchronize selected movie(s) (collection + watched state) with Trakt.tv
 
 movie.export=Export selected movie(s)
 
@@ -461,6 +463,8 @@ tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
 tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
 tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
 tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
+tvshow.synctrakt.selected=Synchronize selected TV show(s) with Trakt.tv
+tvshow.synctrakt.selected.desc=Synchronize selected TV show(s) (collection + watched state) with Trakt.tv
 tvshow.changetodvdorder=Change selected episode(s) to DVD order
 tvshow.changefromdvdorder=Change selected episode(s) to aired order
 tvshow.changeorder.desc=This should be used after import, before you scrape
