Trakt.tv - better translation

--- a/src/messages.properties
+++ b/src/messages.properties
@@ -132,12 +132,12 @@ movie.findmissing=Find missing movies
 movie.assignmovieset=Find movie sets for selected movie(s)
 movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 movie.setwatchedflag=Set the watched flag for selected movie(s)
-movie.synctrakt=Synchronize the movie collection with Trakt.tv
-movie.synctrakt.desc=Synchronize the movie collection with Trakt.tv
-movie.synctraktwatched=Synchronize the watched state with Trakt.tv
-movie.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
-movie.synctrakt.selected=Synchronize selected movie(s) with Trakt.tv
-movie.synctrakt.selected.desc=Synchronize selected movie(s) (collection + watched state) with Trakt.tv
+movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
+movie.synctrakt.desc=Trakt.tv - Synchronize complete 'collection'
+movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state 
+movie.synctraktwatched.desc=Trakt.tv - Synchronize complete 'watched' state
+movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+movie.synctrakt.selected.desc=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
 
 movie.export=Export selected movie(s)
 
@@ -459,12 +459,12 @@ tvshow.renamer.tvshowfolder=Rename TV show folder
 tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 tvshow.export=Export selected TV show(s)
-tvshow.synctrakt=Synchronize the TV show collection with Trakt.tv
-tvshow.synctrakt.desc=Synchronize the TV show collection with Trakt.tv
-tvshow.synctraktwatched=Synchronize the watched state with Trakt.tv
-tvshow.synctraktwatched.desc=Synchronize the watched state with Trakt.tv
-tvshow.synctrakt.selected=Synchronize selected TV show(s) with Trakt.tv
-tvshow.synctrakt.selected.desc=Synchronize selected TV show(s) (collection + watched state) with Trakt.tv
+tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
+tvshow.synctrakt.desc=Trakt.tv - Synchronize complete 'collection'
+tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
+tvshow.synctraktwatched.desc=Trakt.tv - Synchronize complete 'watched' state
+tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+tvshow.synctrakt.selected.desc=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
 tvshow.changetodvdorder=Change selected episode(s) to DVD order
 tvshow.changefromdvdorder=Change selected episode(s) to aired order
 tvshow.changeorder.desc=This should be used after import, before you scrape
