--- a/src/messages.properties
+++ b/src/messages.properties
@@ -133,11 +133,11 @@ movie.assignmovieset=Find movie sets for selected movie(s)
 movie.assignmovieset.desc=<html>Assign selected movie(s) to their movie sets<br />This feature is restricted to our donators</html>
 movie.setwatchedflag=Set the watched flag for selected movie(s)
 movie.synctrakt=Trakt.tv - Synchronize complete 'collection'
-movie.synctrakt.desc=Trakt.tv - Synchronize complete 'collection'
+movie.synctrakt.desc=Adds all your local movies to your Trakt.tv collection, and syncs the 'date added'.
 movie.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state 
-movie.synctraktwatched.desc=Trakt.tv - Synchronize complete 'watched' state
+movie.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
 movie.synctrakt.selected=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
-movie.synctrakt.selected.desc=Trakt.tv - Synchronize selected movie(s) - 'collected' and 'watched'
+movie.synctrakt.selected.desc=Syncs only the selected movie(s) with Trakt.tv. Collection and watched state.
 
 movie.export=Export selected movie(s)
 
@@ -460,11 +460,11 @@ tvshow.renamer.tvshowfolder.year=Add year to the TV show folder
 tvshow.updatemediainfo=Update media information of selected TV shows(s)/episodes(s)
 tvshow.export=Export selected TV show(s)
 tvshow.synctrakt=Trakt.tv - Synchronize complete 'collection'
-tvshow.synctrakt.desc=Trakt.tv - Synchronize complete 'collection'
+tvshow.synctrakt.desc=Adds all your local shows to your Trakt.tv collection, and syncs the 'date added'.
 tvshow.synctraktwatched=Trakt.tv - Synchronize complete 'watched' state
-tvshow.synctraktwatched.desc=Trakt.tv - Synchronize complete 'watched' state
+tvshow.synctraktwatched.desc=Syncs all 'watched' states from Trakt.tv.
 tvshow.synctrakt.selected=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
-tvshow.synctrakt.selected.desc=Trakt.tv - Synchronize selected TV show(s) - 'collected' and 'watched'
+tvshow.synctrakt.selected.desc=Syncs only the selected TV show(s) with Trakt.tv. Collection and watched state.
 tvshow.changetodvdorder=Change selected episode(s) to DVD order
 tvshow.changefromdvdorder=Change selected episode(s) to aired order
 tvshow.changeorder.desc=This should be used after import, before you scrape
